# rubikscube

./: CMakeLists.txt  README.md  main.cpp
Models/: RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.h  CornerPatternDatabse.cpp  NIbbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
solver/: BFSsolver.h  DFSsolver.h  IDAstarsolver.h  IDDFSsolver.h
